# admin-toggl-mcp

./: .gitignore  .npmignore  CONNECTOR_README.md  CONNECTOR_SETUP.md  FUNDING.yml  NPM_README.md  PUBLISHING.md  README.md  connector.json  connector.py  debug_revenue.py  debug_summary_vs_v3.py  final_test.py  install_connector.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  server.py  setup-npm-package.sh  standalone_server.py  test_all_reports_consistency.py  test_connector.py  test_final_integration.py  test_revenue_fix.py  test_server.py  tsconfig.json  uv_server.py
src/: index.ts
src/toggl_server/: __init__.py  admin_processor.py  main.py  models.py  reports_api.py  toggl_api.py  utils.py
